<resources>
    <string name="app_name">Задачник</string>
    <string name="task1">Заметка первая</string>
    <string name="description1">… И ее прекрасное описание</string>
    <string name="description2">Описание заметки которая выполнена №2</string>
    <string name="description3">Opisanie of description</string>
    <string name="description4">Здесь что то написано</string>
    <string name="task4">Купить слона</string>
    <string name="task3">Сделать уроки</string>
    <string name="task2">Приготовить ужин и еще еды на завтра</string>
    <string name="tasks">Задачи</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="completed">Completed</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="filter">Filter</string>
    <string name="settings">Настройки</string>
    <string name="btn_add_func">Дополнительно</string>
    <string name="btn_base_func">Базово</string>
    <string name="checkbox_base">Базовый функционал</string>
    <string name="checkbox_additional">Дополнительный фунцкционал</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="add_task">Добавить</string>
    <string name="action_about">О программе</string>
    <string name="toolbar_title">Начальный экран</string>
    <string name="list_toolbar_title">Список задач</string>
    <string name="action_share">Поделиться</string>
    <string name="details_toolbar_title">Детали задачи</string>
    <string name="action_clear_all">Очистить всё</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="all">All</string>
    <string name="undone">Undone</string>
    <string name="done">Done</string>
    <string name="back">Назад</string>
    <string name="task_title">Заголовок задачи</string>
    <string name="sign_out">Выйти</string>
    <string name="auth">Сигн ин</string>
    <string name="exit">Выход</string>
    <string name="success_auth">Успешная авторизация </string>
    <string name="earlier_auth">Вы уже ранее авторизованы: </string>
    <string name="account_exit">Выход из УЗ</string>

</resources>